# apartment-hunter

./: .dockerignore  .gitignore  1_cleaning.ipynb  2_analysis.ipynb  3_model.ipynb  CLAUDE.md  Dockerfile  Dockerfile.api  Dockerfile.front  Dockerfile.streamlit  README.md  RESUME_DIVISION_TYPES.md  V0.ipynb  analysis.ipynb  analysis_utils.py  apartment.pbix  api.py  cleaning.ipynb  cleaning_utils.py  create_model.py  docker-compose.yml  dockerfiles  eda.pbix  eda2.pbix  fill_nan.ipynb  houses_madrid_cleaned.csv  main.py  model.ipynb  model.pkl  preprocess.ipynb  preprocess_utils.py  pyproject.toml  raw.pbix  requierement.txt  requirements.txt  train_export_model.py
.github/: copilot-instructions.md
data_model/: X_test.feather  X_train.feather  houses.feather  houses_enriched.feather  houses_madrid_eda_features.csv  y_test.feather  y_train.feather
docs/: RESUME_DIVISION_TYPES.md  algorithms.md  api_guide.md  docker.md  methodology.md  results.md
front_app/: app.py
frontent/: app.py  dashboard.py  index.py  style.css
models/: model_config.json  model_metadata.pkl  neighborhood_mapping.json  preprocessor.pkl  scaler.pkl  streamlit_config.json  xgboost_model.pkl
notebook/: 1_cleaning.ipynb  2_analysis.ipynb  3_model.ipynb  analysis.ipynb  df_appartements_model.csv  df_maisons_model.csv  model.ipynb
streamlit_app/: app.py  style.css
