[project]
name = "apartment-hunter"
version = "0.1.0"
description = "Application pour prédire le prix d'un bien immobilier sur Madrid"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "joblib>=1.3.2",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "pyarrow>=14.0.0",
    # Fixé sur la version d'entraînement pour éviter les InconsistentVersionWarning
    "scikit-learn==1.7.2", 
    "streamlit>=1.28.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "chardet>=5.2.0",
]

# Configuration spécifique pour uv
[tool.uv]
managed = true
package = false